<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginLeft="@dimen/dp20"
    android:layout_marginRight="@dimen/dp20"
    android:background="@drawable/spr_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_warning_title"
        android:layout_marginTop="@dimen/dp20"
        android:textStyle="bold"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/black"
        android:text="@string/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/dp5"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/black"
        android:id="@+id/txt_warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View

        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40">
        <TextView
            android:visibility="gone"
            android:id="@+id/btn_warning_cancel"
            android:gravity="center"
            android:text="@string/btn_no"
            android:textColor="@color/red"
            android:textSize="@dimen/text_17sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <View
            android:visibility="gone"
            android:id="@+id/view_warning"
            android:background="@color/gray"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView

            android:id="@+id/btn_warning_ok"
            android:gravity="center"
            android:text="@string/btn_yes"
            android:textColor="@color/app_bar"
            android:textSize="@dimen/text_17sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>



</LinearLayout>