<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llLoginInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_top_login"
        android:background="@drawable/spr_bg_login"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp15"
            android:padding="@dimen/dp5"
            android:id="@+id/txtTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/txtLableFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spr_click_textview"
            android:paddingVertical="@dimen/dp5"
            android:text="@string/lable_fullname"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/llFullName"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleLogin" />
        <RelativeLayout
            android:id="@+id/llFullName"

            app:layout_constraintWidth_percent="0.4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spr_login_edt"
            app:layout_constraintEnd_toStartOf="@+id/llPhone"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLableFullName">

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp5"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_fullname"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:inputType="text"
                android:padding="@dimen/dp7"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_login" />

        </RelativeLayout>
        <TextView
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/txtLablePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spr_click_textview"
            android:paddingVertical="@dimen/dp5"
            android:text="@string/lable_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/llPhone"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleLogin" />
        <RelativeLayout
            android:id="@+id/llPhone"
            app:layout_constraintWidth_percent="0.4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spr_login_edt"
            app:layout_constraintStart_toEndOf="@+id/llFullName"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLablePhone">

            <EditText
                android:enabled="false"
                android:focusable="false"
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp5"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_phone"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:inputType="number"
                android:padding="@dimen/dp7"
                android:textColor="@color/gray_text"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_login" />

        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spr_click_textview"
            android:paddingVertical="@dimen/dp5"
            android:text="@string/lable_fullname"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/llPass"
            app:layout_constraintTop_toBottomOf="@+id/llFullName" />

        <RelativeLayout
            android:id="@+id/llPass"
            app:layout_constraintWidth_percent="0.4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spr_login_edt"
            app:layout_constraintEnd_toStartOf="@+id/llPhone"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass">

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp5"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_pass"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/dp7"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_login" />
            <ImageView
                android:id="@+id/imgPass"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:padding="@dimen/dp5"
                android:src="@drawable/ic_eye_hide"
                android:tint="@color/gray" />
        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/txtPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spr_click_textview"
            android:paddingVertical="@dimen/dp5"
            android:text="@string/lable_fullname"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/llPassConfirm"
            app:layout_constraintTop_toBottomOf="@+id/llFullName" />

        <RelativeLayout
            android:id="@+id/llPassConfirm"
            app:layout_constraintWidth_percent="0.4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spr_login_edt"
            app:layout_constraintStart_toEndOf="@+id/llFullName"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/llPass">

            <EditText
                android:id="@+id/edtPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp5"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_pass"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/dp7"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_login" />

            <ImageView
                android:id="@+id/imgPassConfirm"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:padding="@dimen/dp5"
                android:src="@drawable/ic_eye_hide"
                android:tint="@color/gray" />
        </RelativeLayout>


        <Button
            android:layout_marginTop="@dimen/dp15"
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/spr_button_oragen_click"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_login"
            app:layout_constraintTop_toBottomOf="@+id/llPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:layout_marginTop="@dimen/dp5"
            android:padding="@dimen/dp5"
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_guild"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back_new"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>