<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_infor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo_365"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/dp3"
        android:src="@drawable/logo365"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_infor" />

    <TextView
        android:id="@+id/txt_content_infor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/txt_content_information"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_xeptrung"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_365"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/img_bo_cong_thuong"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp5"
        android:src="@drawable/icon_bo_cong_thuong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.35" />

    <TextView

        android:textColor="@color/black"
        android:id="@+id/txt_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/spr_click_textview"
        android:text="@string/txt_policy"
        android:textSize="@dimen/txt_xeptrung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView

        android:id="@+id/txt_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp10"
        android:background="@drawable/spr_click_textview"
        android:text="@string/txt_web_home"
        android:textColor="@color/txt_point"
        android:textSize="@dimen/text_14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txt_policy"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp7"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:src="@drawable/ic_back_menu"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="@dimen/dp10"
        android:background="@drawable/spr_click_textview"
        android:textColor="@color/black"

        android:textSize="@dimen/txt_name_home"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>